set( libs spatialops spatialops-stencil spatialops-structured ${TPL_LIBRARIES} )

if( ENABLE_CUDA )
	set(libs ${libs} spatialops_cuda )
endif( ENABLE_CUDA )

add_executable( test_stencil2 test_stencil2.cpp )
target_link_libraries( test_stencil2 ${libs} )
add_test( stencil2_x_nobc  test_stencil2  --ny=1 --nz=1 ) 
add_test( stencil2_x_bc    test_stencil2  --ny=1 --nz=1 --bcx )
add_test( stencil2_y_nobc  test_stencil2  --nx=1 --nz=1 ) 
add_test( stencil2_y_bc    test_stencil2  --nx=1 --nz=1 --bcy )
add_test( stencil2_z_nobc  test_stencil2  --ny=1 --nx=1 ) 
add_test( stencil2_z_bc    test_stencil2  --ny=1 --nx=1 --bcz )
add_test( stencil2_bcxyz   test_stencil2  --bcx --bcy --bcz )
add_test( stencil2_bcxy    test_stencil2  --bcx --bcy )
add_test( stencil2_bcxz    test_stencil2  --bcx --bcz )
add_test( stencil2_bcyz    test_stencil2  --bcz --bcy )
add_test( stencil2_bcx     test_stencil2  --bcx )
add_test( stencil2_bcy     test_stencil2  --bcy )
add_test( stencil2_bcz     test_stencil2  --bcz )
add_test( stencil2_no_bc   test_stencil2  --bcz )
add_test( stencil2_no_bc2  test_stencil2  --nx 5 --ny 6 --nz 7 )
add_test( stencil2_no_bc3  test_stencil2  --nx 6 --ny 7 --nz 5 )

add_executable( test_stencil4 test_stencil4.cpp )
target_link_libraries( test_stencil4 ${libs} )
add_test( stencil4_bcx test_stencil4 --bcx )
add_test( stencil4_bcy test_stencil4 --bcy )
add_test( stencil4_bcz test_stencil4 --bcz )
add_test( stencil4_bcxy test_stencil4 --bcx --bcy )
add_test( stencil4_bcxz test_stencil4 --bcx --bcz )
add_test( stencil4_bcyz test_stencil4 --bcy --bcz )
add_test( stencil4_3    test_stencil4 --nx=6 --ny=8 --nz=10 --bcx --bcy --bcz )

add_executable( test_bc_stencil testOpBC.cpp )
target_link_libraries( test_bc_stencil ${libs} )
add_test( test_bc_op_stencil test_bc_stencil )

add_executable( test_filter test_filter.cpp )
target_link_libraries( test_filter ${libs} )
add_test( test_filter test_filter )